Animaciones y cambios visuales

--- a/Paginas/Contacto.html
+++ b/Paginas/Contacto.html
@@ -15,6 +15,7 @@
 
     <!--Nav Bar-->
     <div id="links">
+      <img src="../Imagenes/Logo.png" alt="Logo">
       <ul>
         <a href="../index.html">
           <li>Inicio</li>
@@ -90,5 +91,19 @@
         </form>
       </div>
     </div>
+    <footer>
+      <div class="footer-grid">
+        <div class="contacto">
+          <div>+54 011 11 1111 1111</div>
+          <div>@juanitoYLosClonosaurios@gmail.com</div>
+          <div>Buenos aires, Vicente Lopez</div>
+          CONTACTANOS
+        </div>
+        <div class="redes">
+          REDES SOCIALES
+          <a href="https://www.instagram.com/?hl=es-la" target="_blank"><img src="../Imagenes/instagram.png" alt="Logo de instagram"></a>
+        </div>
+      </div>
+    </footer>
   </body>
   </html>
