--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="grid">
             <!--Nav Bar-->
         <div id="links">
+            <img src="./Imagenes/Logo.png" alt="Logo">
             <ul>
                 <a href="index.html" class="flex-item">
                     <li>Inicio</li>
