--- a/Paginas/Productos.html
+++ b/Paginas/Productos.html
@@ -17,6 +17,7 @@
 
         <!--Nav Bar-->
         <div id="links">
+            <img src="../Imagenes/Logo.png" alt="Logo">
             <ul>
                 <a href="../index.html">
                     <li>Inicio</li>
@@ -93,8 +94,19 @@
         </a>
     </div>
     <footer>
-        <a href="#contenedor">go to top</a>
-    </footer>
+        <div class="footer-grid">
+          <div class="contacto">
+            <div>+54 011 11 1111 1111</div>
+            <div>@juanitoYLosClonosaurios@gmail.com</div>
+            <div>Buenos aires, Vicente Lopez</div>
+            CONTACTANOS
+          </div>
+          <div class="redes">
+            REDES SOCIALES
+            <a href="https://www.instagram.com/?hl=es-la" target="_blank"><img src="../Imagenes/instagram.png" alt="Logo de instagram"></a>
+          </div>
+        </div>
+      </footer>
     <script src="../js/wow.js"></script>
     <script>
         new WOW().init();
