--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/estilos.css">
     <link rel="stylesheet" href="CSS/index.css">
     <style>
@@ -12,63 +13,48 @@
 </head>
 
 <body>
-    
-    <div class="grid">
-            <!--Nav Bar-->
-        <div id="links">
-            <img src="./Imagenes/Logo.png" alt="Logo">
-            <ul>
-                <a href="index.html" class="flex-item">
-                    <li>Inicio</li>
-                </a>
-                <a href="Paginas/Productos.html" class="flex-item">    
-                    <li> Productos</li>
-                </a>
-                <a href="Paginas/Info.html" class="flex-item">
-                    <li>Info</li>
-                </a>
-                <a href="Paginas/Galeria.html" class="flex-item">
-                    <li>Galeria</li>
-                </a>
-                <a href="Paginas/Contacto.html" class="flex-item">
-                    <li>Contacto</li>
-                </a>
-            </ul>
-        </div>
-        <div id="links2">
-            <a href="Paginas/Productos.html" class="flex-item">    
-                <div class="circulo">
-                    <div> Productos</div>
+    <!--Nav Bar-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top" id="nav-inicio">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="./Imagenes/Logo.png" alt="Logo" height="50">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link" aria-current="page" href="./Productos.html">Productos</a>
+                    <a class="nav-link" href="./Galeria.html">Galeria</a>
+                    <a class="nav-link" href="./Info.html">Informacion</a>
+                    <a class="nav-link" href="./Contacto.html">Contacto</a>
                 </div>
-            </a>
-            <a href="Paginas/Info.html" class="flex-item">
-                <div class="circulo">
-                    <div>Info</div>  
-                </div>
-            </a>
-            <a href="Paginas/Galeria.html" class="flex-item">
-                <div class="circulo">
-                    <div>Galeria</div>
-                </div>
-            </a>
-            <a href="Paginas/Contacto.html" class="flex-item">
-                <div class="circulo">
-                    <div>Contacto</div>
-                </div>
-            </a>
+            </div>
         </div>
-        <!--Logo wpp-->
-        <div id="wpp">
-            <a href="https://web.whatsapp.com/" target="_blank">
-                <img src="Imagenes/wpp.png" alt="Logo de Whatsapp">
-            </a>
-        </div>
-        <!--Video de fondo-->
-        <div id="video">
-            <video autoplay muted loop>
-                <source src="./Imagenes/videoplayback.mp4">
-            </video>
-        </div>
+    </nav>
+    <!--Logo en pantalla Celular-->
+    <div class="text-center" id="logo-inicio">
+        <img src="./Imagenes/Logo.png" class="p-5 img-fluid" alt="Logo de la marca">
     </div>
+    <!--Botones para navegar en celular-->
+    <div class="d-grid gap-3 col-8 mx-auto mt-3" id="botones-inicio">
+        <a class="btn btn-primary" type="button" href="./Productos.html">Productos</a>
+        <a class="btn btn-primary" type="button" href="./Galeria.html">Galeria</a>
+        <a class="btn btn-primary" type="button" href="./Info.html">Informacion</a>
+        <a class="btn btn-primary" type="button" href="./Contacto.html">Contacto</a>
+    </div>
+    <!--wpp-->
+    <div id="wpp">
+        <a href="https://web.whatsapp.com/" target="_blank">
+            <img src="Imagenes/wpp.png" alt="Logo de Whatsapp">
+        </a>
+    </div>
+    <!--Video de fondo-->
+    <div id="video">
+        <video autoplay muted loop>
+            <source src="./Imagenes/videoplayback.mp4">
+        </video>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
