error fotos galeria

--- a/Galeria.html
+++ b/Galeria.html
@@ -32,9 +32,9 @@
     </nav>
     <!--Fotos-->
     <div id="fotos-galeria" >
-      <img class="foto" src="../Imagenes/Pasteleria/tortaBrownie1.jpg" alt="Alfajor marplatense">
-      <img class ="foto"  src="../Imagenes/Pasteleria/redVelvet1.jpg" alt="Torta brownie">
-      <img class="foto" src="../Imagenes/Pasteleria/medialunas.jpg" alt="Medialunas">
+      <img class="foto" src="./Imagenes/Pasteleria/tortaBrownie1.jpg" alt="Alfajor marplatense">
+      <img class ="foto"  src="./Imagenes/Pasteleria/redVelvet1.jpg" alt="Torta brownie">
+      <img class="foto" src="./Imagenes/Pasteleria/medialunas.jpg" alt="Medialunas">
     </div>
     <!--wpp-->
     <div id="wpp">
