--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <body>
     <!--Nav Bar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top" id="nav-inicio">
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top" id="nav-inicio">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="#" id="navbar-logo">
                 <img src="./Imagenes/Logo.png" alt="Logo" height="50">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,10 +24,19 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" aria-current="page" href="./Productos.html">Productos</a>
-                    <a class="nav-link" href="./Galeria.html">Galeria</a>
-                    <a class="nav-link" href="./Info.html">Informacion</a>
-                    <a class="nav-link" href="./Contacto.html">Contacto</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Productos
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <li><a class="dropdown-item" href="./Productos.html">Tortas</a></li>
+                          <li><a class="dropdown-item" href="./Dulces.html">Dulces</a></li>
+                          <li><a class="dropdown-item" href="./Salados.html">Salados</a></li>
+                        </ul>
+                    </li>
+                    <a class="nav-link" id="navbar-link" href="./Galeria.html">Galeria</a>
+                    <a class="nav-link" id="navbar-link" href="./Info.html">Informacion</a>
+                    <a class="nav-link" id="navbar-link" href="./Contacto.html">Contacto</a>
                 </div>
             </div>
         </div>
@@ -44,9 +53,9 @@
         <a class="btn btn-primary" type="button" href="./Contacto.html">Contacto</a>
     </div>
     <!--wpp-->
-    <div id="wpp">
+    <div>
         <a href="https://web.whatsapp.com/" target="_blank">
-            <img src="Imagenes/wpp.png" alt="Logo de Whatsapp">
+          <svg id="wpp" width="64" height="64"></svg>
         </a>
     </div>
     <!--Video de fondo-->
