--- a/Dulces.html
+++ b/Dulces.html
@@ -8,10 +8,10 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;600&display=swap');
     </style>
-    <title>Informacion</title>
+    <title>Productos</title>
   </head>
-  <!--Navbar-->
-  <body class="d-flex flex-column">
+  <body>
+    <!--NavBar-->
     <nav class="navbar navbar-expand-lg navbar-light sticky-top" id="navbar">
       <div class="container-fluid">
         <a class="navbar-brand" href="./index.html" id="navbar-logo">
@@ -32,6 +32,7 @@
                 <li><a class="dropdown-item" href="./Salados.html">Salados</a></li>
               </ul>
             </li>
+            <a class="nav-link" id="navbar-link" aria-current="page" href="#">Productos</a>
             <a class="nav-link" id="navbar-link" href="./Galeria.html">Galeria</a>
             <a class="nav-link" id="navbar-link" href="./Info.html">Informacion</a>
             <a class="nav-link" id="navbar-link" href="./Contacto.html">Contacto</a>
@@ -39,58 +40,22 @@
         </div>
       </div>
     </nav>
-    <div class="display-3 text-center mt-5 mb-5" id="titulo">Preguntas frecuentes</div>
-    <!--FAQS-->
-    <div class="accordion me-5 mx-5" id="faqs">
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="headingOne">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false"  aria-controls="collapseOne">
-            Cual es el tiempo de reserva?
-          </button>
-        </h2>
-        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" >
-          <div class="accordion-body">
-            Las reservas se toman con un tiempo de anticipacion de <strong>72 horas</strong> antes del pedido
+    <div class="display-3 text-center mt-5 mb-5" id="titulo">Nuestros productos</div>
+    <!--Productos Tortas-->
+    <div class="mb-5">
+      <div class="row row-cols-1 row-cols-md-4 row-cols-xl-6 g-4 me-5 ms-5">
+        <div class="col" id="producto">
+          <div class="card">
+            <div id="fondo-producto"></div>
+            <img src="./Imagenes/Pasteleria/alfajor.jpg" class="card-img-top" alt="Alfajor marplatense">
+            <div class="card-body">
+              <h5 class="nombre card-title">Alfajor marplatense</h5>
+              <p class="precio card-text secondary">$9999,99</p>
+              <p class="descripcion card-text">3 discos húmedos de vainilla con un leve sabor a cacao intercalados con frosting de vainilla y queso crema.</p>
+            </div>
           </div>
         </div>
       </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="headingTwo">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-            Cuales son los medio de pago?
-          </button>
-        </h2>
-        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" >
-          <div class="accordion-body">
-            Se puede abonar con transferencia bancaria, Mercadopago o en efectivo al momento de la entrega
-          </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="headingThree">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-            Que productos usan?
-          </button>
-        </h2>
-        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" >
-          <div class="accordion-body">
-            Usamos productos de primera marca para todas nuestras recetas
-          </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="headingFour">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-            Lorem ipsum dolor sit amet.
-          </button>
-        </h2>
-        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" >
-          <div class="accordion-body">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, sequi!
-          </div>
-        </div>
-      </div>
-      
     </div>
     <!--wpp-->
     <div>
@@ -98,7 +63,7 @@
         <svg id="wpp" width="64" height="64"></svg>
       </a>
     </div>
-    <!--Footer-->
+    <!--FOOTER-->
     <footer class="footer mt-auto py-3"  id="footer">
       <div class="container">
         <span>    
@@ -110,7 +75,7 @@
               </a>
             </div>
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-              <li class="ms-3"><a class="text-muted" href="#"><svg id="ig" class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+              <li class="ms-3"><a class="text-muted" href="#"><svg id="ig"class="bi" width="24" height="24"><use href="#instagram"></use></svg></a></li>
               <li class="ms-3"><a class="text-muted" href="#"><svg id="wpp2"class="bi" width="24" height="24"><use href="https://web.whatsapp.com/"></use></svg></a></li>
             </ul>
           </div>
@@ -118,7 +83,7 @@
       </span>
       </div>
     </footer>
-    
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
