--- a/Galeria.html
+++ b/Galeria.html
@@ -12,9 +12,9 @@
   </head>
   <!--Navbar-->
   <body class="d-flex flex-column">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top" id="navbar">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html">
+        <a class="navbar-brand" href="./index.html" id="navbar-logo">
           <img src="./Imagenes/Logo.png" alt="Logo" height="50">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,10 +22,19 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" aria-current="page" href="./Productos.html">Productos</a>
-            <a class="nav-link" href="#">Galeria</a>
-            <a class="nav-link" href="./Info.html">Informacion</a>
-            <a class="nav-link" href="./Contacto.html">Contacto</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Productos
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="./Productos.html">Tortas</a></li>
+                <li><a class="dropdown-item" href="./Dulces.html">Dulces</a></li>
+                <li><a class="dropdown-item" href="./Salados.html">Salados</a></li>
+              </ul>
+            </li>
+            <a class="nav-link" id="navbar-link" href="#">Galeria</a>
+            <a class="nav-link" id="navbar-link" href="./Info.html">Informacion</a>
+            <a class="nav-link" id="navbar-link" href="./Contacto.html">Contacto</a>
           </div>
         </div>
       </div>
@@ -37,9 +46,9 @@
       <img class="foto" src="./Imagenes/Pasteleria/medialunas.jpg" alt="Medialunas">
     </div>
     <!--wpp-->
-    <div id="wpp">
+    <div>
       <a href="https://web.whatsapp.com/" target="_blank">
-          <img src="Imagenes/wpp.png" alt="Logo de Whatsapp">
+        <svg id="wpp" width="64" height="64"></svg>
       </a>
     </div>
     <!--Footer-->
@@ -52,13 +61,11 @@
               <a href="./index.html" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
                 <img class="ms-3" width="70" src="./Imagenes/Logo.png"></img>
               </a>
-              <span class="text-muted">© 2021 Company, Inc</span>
             </div>
         
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-              <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
-              <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
-              <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+              <li class="ms-3"><a class="text-muted" href="#"><svg id="ig" class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+              <li class="ms-3"><a class="text-muted" href="#"><svg id="wpp2"class="bi" width="24" height="24"><use href="https://web.whatsapp.com/"></use></svg></a></li>
             </ul>
           </div>
         </div>
