--- a/Boxes.html
+++ b/Boxes.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Cajas de pasteleria artesanal para desayunos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./CSS/index.css">
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;600&display=swap');
-    </style>
-    <title>Productos</title>
+    <link rel="stylesheet" href="./CSS/estilos.css">
+    <title>Desayunos y boxes</title>
+    
   </head>
   <body>
     <!--NavBar-->
@@ -29,10 +28,9 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="./Productos.html">Tortas</a></li>
                 <li><a class="dropdown-item" href="./Dulces.html">Dulces</a></li>
-                <li><a class="dropdown-item" href="#">Salados</a></li>
+                <li><a class="dropdown-item" href="#">Desayunos y boxes</a></li>
               </ul>
             </li>
-            <a class="nav-link" id="navbar-link" aria-current="page" href="#">Productos</a>
             <a class="nav-link" id="navbar-link" href="./Galeria.html">Galeria</a>
             <a class="nav-link" id="navbar-link" href="./Info.html">Informacion</a>
             <a class="nav-link" id="navbar-link" href="./Contacto.html">Contacto</a>
@@ -40,10 +38,10 @@
         </div>
       </div>
     </nav>
-    <div class="display-3 text-center mt-5 mb-5" id="titulo">Nuestros productos</div>
+    <div class="display-3 text-center mt-5 mb-5" id="titulo">Desayunos y boxes</div>
     <!--Productos Tortas-->
     <div class="mb-5">
-      <div class="row row-cols-1 row-cols-md-4 row-cols-xl-6 g-4 me-5 ms-5">
+      <div class="row row-cols-1 row-cols-md-3 row-cols-xl-5 g-4 me-5 ms-5">
         
       </div>
     </div>
@@ -54,14 +52,14 @@
       </a>
     </div>
     <!--FOOTER-->
-    <footer class="footer mt-auto py-3"  id="footer">
+    <footer class="footer mt-auto py-3 position-absolute bottom-0"  id="footer">
       <div class="container">
         <span>    
           <div class="container bottom-0">
           <div class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
             <div class="col-md-4 d-flex align-items-center">
               <a href="./index.html" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-                <img class="ms-3" width="70" src="./Imagenes/Logo.png"></img>
+                <img class="ms-3" width="70" src="./Imagenes/Logo.png" alt="Logo"></img>
               </a>
             </div>
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
