--- a/Contacto.html
+++ b/Contacto.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Contacto para mandar mail y hacer consultas">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./CSS/index.css">
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;600&display=swap');
-    </style>
+    <link rel="stylesheet" href="./CSS/estilos.css">
     <title>Contacto</title>
   </head>
   <!--Navbar-->
@@ -29,7 +27,7 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="./Productos.html">Tortas</a></li>
                 <li><a class="dropdown-item" href="./Dulces.html">Dulces</a></li>
-                <li><a class="dropdown-item" href="./Salados.html">Salados</a></li>
+                <li><a class="dropdown-item" href="./Boxes.html">Desayunos y boxes</a></li>
               </ul>
             </li>
             <a class="nav-link" id="navbar-link" href="./Galeria.html">Galeria</a>
@@ -70,7 +68,7 @@
           <div class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
             <div class="col-md-4 d-flex align-items-center">
               <a href="./index.html" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-                <img class="ms-3" width="70" src="./Imagenes/Logo.png"></img>
+                <img class="ms-3" width="70" src="./Imagenes/Logo.png" alt="Logo"></img>
               </a>
             </div>
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
