--- a/Dulces.html
+++ b/Dulces.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Pasteleria artesanal, cosas dulces para desayunar y merendar">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./CSS/index.css">
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;600&display=swap');
-    </style>
+    <link rel="stylesheet" href="./CSS/estilos.css">
     <title>Productos</title>
   </head>
   <body>
@@ -29,10 +27,9 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="./Productos.html">Tortas</a></li>
                 <li><a class="dropdown-item" href="./Dulces.html">Dulces</a></li>
-                <li><a class="dropdown-item" href="./Salados.html">Salados</a></li>
+                <li><a class="dropdown-item" href="./Boxes.html">Desayunos y boxes</a></li>
               </ul>
             </li>
-            <a class="nav-link" id="navbar-link" aria-current="page" href="#">Productos</a>
             <a class="nav-link" id="navbar-link" href="./Galeria.html">Galeria</a>
             <a class="nav-link" id="navbar-link" href="./Info.html">Informacion</a>
             <a class="nav-link" id="navbar-link" href="./Contacto.html">Contacto</a>
@@ -40,16 +37,49 @@
         </div>
       </div>
     </nav>
-    <div class="display-3 text-center mt-5 mb-5" id="titulo">Nuestros productos</div>
+    <div class="display-3 text-center mt-5 mb-5" id="titulo">Nuestros productos dulces</div>
     <!--Productos Tortas-->
     <div class="mb-5">
-      <div class="row row-cols-1 row-cols-md-4 row-cols-xl-6 g-4 me-5 ms-5">
+      <div class="row row-cols-1 row-cols-md-3 row-cols-xl-5 g-4 me-5 ms-5">
         <div class="col" id="producto">
           <div class="card">
             <div id="fondo-producto"></div>
             <img src="./Imagenes/Pasteleria/alfajor.jpg" class="card-img-top" alt="Alfajor marplatense">
             <div class="card-body">
               <h5 class="nombre card-title">Alfajor marplatense</h5>
+              <p class="precio card-text secondary">$9999,99</p>
+              <p class="descripcion card-text">3 discos húmedos de vainilla con un leve sabor a cacao intercalados con frosting de vainilla y queso crema.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col" id="producto">
+          <div class="card">
+            <div id="fondo-producto"></div>
+            <img src="./Imagenes/Pasteleria/cookies.jpg" class="card-img-top" alt="Cookies">
+            <div class="card-body">
+              <h5 class="nombre card-title">Cookies</h5>
+              <p class="precio card-text secondary">$9999,99</p>
+              <p class="descripcion card-text">3 discos húmedos de vainilla con un leve sabor a cacao intercalados con frosting de vainilla y queso crema.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col" id="producto">
+          <div class="card">
+            <div id="fondo-producto"></div>
+            <img src="./Imagenes/Pasteleria/medialunas.jpg" class="card-img-top" alt="Medialunas">
+            <div class="card-body">
+              <h5 class="nombre card-title">Medialunas</h5>
+              <p class="precio card-text secondary">$9999,99</p>
+              <p class="descripcion card-text">3 discos húmedos de vainilla con un leve sabor a cacao intercalados con frosting de vainilla y queso crema.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col" id="producto">
+          <div class="card">
+            <div id="fondo-producto"></div>
+            <img src="./Imagenes/Pasteleria/sconQueso.jpg" class="card-img-top" alt="Scon de queso">
+            <div class="card-body">
+              <h5 class="nombre card-title">Scon de queso</h5>
               <p class="precio card-text secondary">$9999,99</p>
               <p class="descripcion card-text">3 discos húmedos de vainilla con un leve sabor a cacao intercalados con frosting de vainilla y queso crema.</p>
             </div>
@@ -71,11 +101,11 @@
           <div class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
             <div class="col-md-4 d-flex align-items-center">
               <a href="./index.html" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-                <img class="ms-3" width="70" src="./Imagenes/Logo.png"></img>
+                <img class="ms-3" width="70" src="./Imagenes/Logo.png" alt="Logo"></img>
               </a>
             </div>
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-              <li class="ms-3"><a class="text-muted" href="#"><svg id="ig"class="bi" width="24" height="24"><use href="#instagram"></use></svg></a></li>
+              <li class="ms-3"><a class="text-muted" href="#"><svg id="ig" class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
               <li class="ms-3"><a class="text-muted" href="#"><svg id="wpp2"class="bi" width="24" height="24"><use href="https://web.whatsapp.com/"></use></svg></a></li>
             </ul>
           </div>
