--- a/Info.html
+++ b/Info.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Preguntas frecuentes. para aclarar dudas">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./CSS/index.css">
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;600&display=swap');
-    </style>
+    <link rel="stylesheet" href="./CSS/estilos.css">
     <title>Informacion</title>
   </head>
   <!--Navbar-->
@@ -29,7 +27,7 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="./Productos.html">Tortas</a></li>
                 <li><a class="dropdown-item" href="./Dulces.html">Dulces</a></li>
-                <li><a class="dropdown-item" href="./Salados.html">Salados</a></li>
+                <li><a class="dropdown-item" href="./Boxes.html">Desayunos y boxes</a></li>
               </ul>
             </li>
             <a class="nav-link" id="navbar-link" href="./Galeria.html">Galeria</a>
@@ -44,36 +42,36 @@
     <div class="accordion me-5 mx-5" id="faqs">
       <div class="accordion-item">
         <h2 class="accordion-header" id="headingOne">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false"  aria-controls="collapseOne">
+          <button class="accordion-button collapsed" id="faqs--title" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false"  aria-controls="collapseOne">
             Cual es el tiempo de reserva?
           </button>
         </h2>
         <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" >
-          <div class="accordion-body">
+          <div class="accordion-body" id="faqs--answer">
             Las reservas se toman con un tiempo de anticipacion de <strong>72 horas</strong> antes del pedido
           </div>
         </div>
       </div>
       <div class="accordion-item">
         <h2 class="accordion-header" id="headingTwo">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+          <button class="accordion-button collapsed" id="faqs--title" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
             Cuales son los medio de pago?
           </button>
         </h2>
         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" >
-          <div class="accordion-body">
+          <div class="accordion-body" id="faqs--answer">
             Se puede abonar con transferencia bancaria, Mercadopago o en efectivo al momento de la entrega
           </div>
         </div>
       </div>
       <div class="accordion-item">
         <h2 class="accordion-header" id="headingThree">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+          <button class="accordion-button collapsed" id="faqs--title" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
             Que productos usan?
           </button>
         </h2>
         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" >
-          <div class="accordion-body">
+          <div class="accordion-body" id="faqs--answer">
             Usamos productos de primera marca para todas nuestras recetas
           </div>
         </div>
@@ -106,7 +104,7 @@
           <div class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
             <div class="col-md-4 d-flex align-items-center">
               <a href="./index.html" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-                <img class="ms-3" width="70" src="./Imagenes/Logo.png"></img>
+                <img class="ms-3" width="70" src="./Imagenes/Logo.png" alt="Logo"></img>
               </a>
             </div>
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
